<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HEMS Health</string>
    <string name="bridge_url_label">Bridge URL</string>
    <string name="bridge_url_hint">http://192.168.x.x:8017</string>
    <string name="webhook_secret_label">Webhook Secret</string>
    <string name="webhook_secret_hint">BIOMETRIC_WEBHOOK_SECRET value</string>
    <string name="sync_interval_label">Sync Interval (min)</string>
    <string name="btn_save">Save</string>
    <string name="btn_sync_now">Sync Now</string>
    <string name="btn_grant_permissions">Grant Health Connect Permissions</string>
    <string name="status_idle">Idle</string>
    <string name="status_syncing">Syncing...</string>
    <string name="status_success">Last sync: %s</string>
    <string name="status_error">Error: %s</string>

    <string-array name="health_permissions">
        <item>android.permission.health.READ_HEART_RATE</item>
        <item>android.permission.health.READ_OXYGEN_SATURATION</item>
        <item>android.permission.health.READ_SLEEP</item>
        <item>android.permission.health.READ_STEPS</item>
        <item>android.permission.health.READ_ACTIVE_CALORIES_BURNED</item>
        <item>android.permission.health.READ_RESTING_HEART_RATE</item>
        <item>android.permission.health.READ_HEART_RATE_VARIABILITY</item>
    </string-array>
</resources>
